<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseSoundActivity"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:id="@+id/radioGroupSounds">
                <RadioButton
                    android:id="@+id/radioButtonSound1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sound_name1"
                    android:gravity="right"
                    android:layout_marginRight="30dp"
                    android:textSize="20dp"
                    android:textStyle="normal"
                    android:layout_marginVertical="10dp" />
                <RadioButton
                    android:id="@+id/radioButtonSound2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sound_name2"
                    android:gravity="right"
                    android:layout_marginRight="30dp"
                    android:textSize="20dp"
                    android:textStyle="normal"
                    android:layout_marginVertical="10dp"/>
                <RadioButton
                    android:id="@+id/radioButtonSound3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sound_name3"
                    android:gravity="right"
                    android:layout_marginRight="30dp"
                    android:textSize="20dp"
                    android:textStyle="normal"
                    android:layout_marginVertical="10dp"/>
                <RadioButton
                    android:id="@+id/radioButtonSound4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sound_name4"
                    android:gravity="right"
                    android:layout_marginRight="30dp"
                    android:textSize="20dp"
                    android:textStyle="normal"
                    android:layout_marginVertical="10dp"/>
                <RadioButton
                    android:id="@+id/radioButtonSound5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sound_name5"
                    android:gravity="right"
                    android:layout_marginRight="30dp"
                    android:textSize="20dp"
                    android:textStyle="normal"
                    android:layout_marginVertical="10dp"/>
            </RadioGroup>
        </LinearLayout>
    </ScrollView>
</LinearLayout>